--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Kadir Özdemir"
+            "name": "Phong Pham"
         }
     ],
     "support": {
